<resources>
    <!--These are the base strings-->
    <string name="app_name">Androidmaster</string>
    <string name="title_menu">Your Apps</string>

    <!--These are the IMC strings-->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="weight_unit">Kgs</string>
    <string name="age_unit">Years</string>
    <string name="calculate">Calculate my IMC</string>
    <string name="result">Your Result</string>
    <string name="recalculate">Re-Calculate my IMC</string>

    <string name="error">Error</string>

    <string name="title_low_weight">Low Weight</string>
    <string name="description_low_weight">You are underweight. You should eat more...</string>

    <string name="title_normal_weight">Normal Weight</string>
    <string name="description_normal_weight">You are in a good shape. Keep it up!</string>

    <string name="title_overweight">Overweight</string>
    <string name="description_overweight">You are overweight. You should eat less...</string>

    <string name="title_obesity">Obesity</string>
    <string name="description_obesity">You are obese...You should go on a diet!</string>

    <string name="error_empty_result">Error: Empty Result</string>

    <!--These are the TODOApp strings-->
    <string name="todo_welcome">Welcome, User</string>
    <string name="todo_categories">Categories</string>
    <string name="todo_tasks">Tasks</string>
    <string name="todo_dialog_add_task">Add a new task</string>
    <string name="todo_no_tasks">You do not seem to have any tasks!</string>

    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_category_business">Business</string>
    <string name="todo_dialog_category_other">Other</string>
    <string name="todo_dialog_create_task_button">Create Task</string>

    <!--These are the SuperHeroApp strings-->
    <string name="superhero_not_searched">No Superhero/Villain searched!</string>
    <string name="no_internet_connection">Oops! No Internet connection!</string>

    <!--These are the settings strings-->
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Allows you to use the dark mode for a visual experience</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_description">Allows you to turn on or off the bluetooth</string>
    <string name="volume">Volume</string>
    <string name="vibrations">Vibrate on notifications</string>
</resources>